# urlshortener

./: .gitignore  manage.py  pyproject.toml  pytest.ini
core/: forms.py  models.py  service.py  tests.py  urls.py  views.py
core/migrations/: 0001_initial.py
core/static/core/: single_link.css
core/templates/base/: base.html
core/templates/core/: create_link.html  list_links.html
core/templates/core/partials/: single_link.html
linkshortener/: settings.py  wsgi.py
urlshortener/: asgi.py  settings.py  urls.py  wsgi.py
